# NeMo-Guardrails-tutorial

./: pyproject.toml
config/: config.yml
src/: hello_world.py  input_rails.py  langchain_integration.py
